tests/invalid/dict_builtin_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = dict({1: 2})


if __name__ == "__main__":
    run_case()
